wip: create snapshot
